修正创建主键错误